ingress/example-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  defaultBackend:
    service:
      name: web2
      port:
        number: 8080
  rules:
    - host: hello-host.info
      http:
         paths:
          - path: /1
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 8080

          - path: /2
            pathType: Prefix
            backend:
              service:
                name: web2
                port:
                  number: 8080
